[gd_scene load_steps=3 format=3 uid="uid://bpsf1c0nk5csu"]

[ext_resource type="Script" path="res://scripts/template_item.gd" id="1_dni6a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_04gqp"]
bg_color = Color(0.211765, 0.282353, 0.396078, 1)

[node name="TemplateItem" type="Control"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("1_dni6a")
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_04gqp")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TemplateInfo" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="TemplateNameLabel" type="Label" parent="PanelContainer/MarginContainer/TemplateInfo"]
layout_mode = 2
mouse_filter = 1
text = "[TemplateName]"
horizontal_alignment = 1

[node name="TemplateDescTextEdit" type="TextEdit" parent="PanelContainer/MarginContainer/TemplateInfo"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
placeholder_text = "Template Descritpiton"
editable = false
wrap_mode = 1

[node name="TemplateTagsLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/TemplateInfo"]
layout_mode = 2
mouse_filter = 1
placeholder_text = "Tags"
editable = false

[node name="TemplateSuggestionsLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/TemplateInfo"]
layout_mode = 2
mouse_filter = 1
placeholder_text = "Suggestions"
editable = false

[node name="TemplateButtons" type="HBoxContainer" parent="PanelContainer/MarginContainer/TemplateInfo"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
alignment = 1

[node name="DeleteTemplateButton" type="Button" parent="PanelContainer/MarginContainer/TemplateInfo/TemplateButtons"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Delete"

[node name="LoadTemplateButton" type="Button" parent="PanelContainer/MarginContainer/TemplateInfo/TemplateButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
mouse_filter = 1
text = "Load"
